--- a/.github/workflows/monolith-ci.yml
+++ b/.github/workflows/monolith-ci.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: monolith-api/package-lock.json
+          cache-dependency-path: 'monolith-api/package-lock.json'
 
       - name: Install dependencies
         working-directory: monolith-api
