--- a/.github/workflows/microservices-ci.yml
+++ b/.github/workflows/microservices-ci.yml
@@ -39,21 +39,23 @@ jobs:
       - name: Wait for services to be healthy
         run: |
           echo "Waiting for services to start..."
-          sleep 30
+          sleep 45
           docker compose -f docker-compose.microservices.yml ps
+          echo "=== API Gateway logs ==="
+          docker compose -f docker-compose.microservices.yml logs api-gateway | tail -30
 
       - name: Check API Gateway health
         run: |
-          for i in {1..30}; do
-            if curl -f http://localhost:3000/auth/login > /dev/null 2>&1; then
+          for i in {1..20}; do
+            if curl -s http://localhost:3000/ > /dev/null 2>&1; then
               echo "API Gateway is responding"
               exit 0
             fi
-            echo "Waiting for API Gateway... ($i/30)"
-            sleep 2
+            echo "Waiting for API Gateway... ($i/20)"
+            sleep 3
           done
           echo "API Gateway failed to start"
-          docker-compose -f docker-compose.microservices.yml logs
+          docker compose -f docker-compose.microservices.yml logs
           exit 1
 
       - name: Run integration tests
